package es.tiernoparla.daw.mercadaw.model.dao;

public class MercaDawDAOFactory {
    
}
