package es.tiernoparla.daw.mercadaw.model.dao;

public enum TipoDB {
    MOCK, MARIADB
}
