package es.tiernoparla.daw.mercadaw.model.entity.producto.enums;

public enum CategoriaProducto {
    ALIMENTACION,
    DROGUERIA,
    COSMETICA
}
